# legacy-OFF

./: COPYING  CreativeCommons-License.html  INSTALL  Makefile.am  README  README.md  configure.ac
contrib/: README.md  quarkd.bash-completion
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: changelog  control
contrib/debian/examples/: bitcoin.conf
contrib/debian/manpages/: bitcoin-qt.1  bitcoin.conf.5  bitcoind.1
contrib/devtools/: github-merge.sh  symbol-check.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/init/: README.md  bitcoind.conf  bitcoind.openrc  bitcoind.openrcconf  bitcoind.service
contrib/linearize/: example-linearize.cfg  linearize-data.py  linearize-hashes.py
contrib/macdeploy/: README.md  detached-sig-apply.sh  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: spendfrom.py
contrib/testgen/: README.md
depends/: .gitignore  Makefile  README  README.usage  config.guess
doc/: Doxyfile  README.md  README_osx.txt  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  coding.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  release-notes.md  release-process.md  tor.md  translation_process.md  travis-ci.txt
doc/release-notes/: release-notes-0.6.3.md
qa/pull-tester/: rpc-tests.sh  tests-config.sh.in
qa/rpc-tests/: bip65-cltv-p2p.py  bip65-cltv.py  util.py  util.sh
share/: setup.nsi.in
share/qt/: Info.plist.in  extract_strings_qt.py
share/seeds/: generate-seeds.py  nodes_main.txt  nodes_test.txt
src/: .clang-format  Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  amount.cpp  amount.h  base58.cpp  base58.h  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoind-res.rc  bitcoind.cpp  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  (+76 more)
src/compat/: strnlen.cpp
src/crypto/: bmw.c  groestl.c  jh.c  keccak.c  skein.c  sph_blake.h  sph_bmw.h  sph_groestl.h  sph_jh.h  sph_keccak.h  sph_skein.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin.cpp  bitcoin.qrc  bitcoin_locale.qrc  bitcoinaddressvalidator.cpp  bitcoinaddressvalidator.h  bitcoinamountfield.cpp  bitcoinamountfield.h  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  (+58 more)
src/qt/forms/: coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_ach.ts  bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cmn.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_gu_IN.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  (+31 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/test/: test_main.cpp  uritests.cpp
src/script/: bitcoinconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/src/: tests.c
src/test/: Checkpoints_tests.cpp  alert_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  getarg_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  netbase_tests.cpp  scriptnum_tests.cpp  test_bitcoin.cpp  transaction_tests.cpp  util_tests.cpp
src/test/data/: script_invalid.json  script_valid.json  tx_invalid.json  tx_valid.json
